--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="./src/main.js" defer>
+    </script>
+    <link rel="stylesheet" href="./css/style.css"/>
     <title>Home</title>
   </head>
   <body>
-    <textarea type="text" name="input" rows="8" cols="80"></textarea>
+    <div id="carrot">
+        <span id="path">/</span>
+        <span id="prompt"> $ </span>
+    <textarea type="text" id="input" rows="1"
+      onkeyup="update()"></textarea>
+    </div>
+    <!-- <p id="output"></p> -->
   </body>
 </html>
