can give command to change ehat is on screen

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <div id="carrot">
         <span id="path">/</span>
         <span id="prompt"> $ </span>
-    <textarea type="text" id="input" rows="1"
-      onkeyup="update()"></textarea>
+    <textarea type="text" id="input" rows="1" onsubmit="execute()"></textarea>
     </div>
     <!-- <p id="output"></p> -->
   </body>
