--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="./src/main.js" defer>
+    <title>Terminal Web App</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="terminal"></div>
+    <script type="module" src="index.js">
     </script>
-    <link rel="stylesheet" href="./css/style.css"/>
-    <title>Home</title>
-  </head>
-  <body>
-    <div id="carrot">
-        <span id="path">/</span>
-        <span id="prompt"> $ </span>
-    <textarea type="text" id="input" rows="1" onsubmit="execute()"></textarea>
-    </div>
-    <!-- <p id="output"></p> -->
-  </body>
+</body>
 </html>
